--- a/index.html
+++ b/index.html
@@ -6,52 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="dist/sc-date-time.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" media="screen">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Sc-date-time by SimeonC</title>
+    <title>sc-date-time by SimeonC</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Sc-date-time</h1>
-        <h2>A Date-Time picker based on Googles Material Design Spec http://simeonc.github.io/sc-date-time</h2>
+        <h1>sc-date-time</h1>
+        <h2>A Date-Time picker based on Googles Material Design Spec</h2>
         <a href="https://github.com/SimeonC/sc-date-time" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
     <div id="content-wrapper">
       <div class="inner clearfix">
-        <section id="main-content">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+        <section id="main-content" ng-app="testMod" ng-controller="testCtrl">
+	        <h3>
+<a id="demo" class="anchor" href="#demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo's</h3>
+			<p>Change Locale by including correct i18n file, eg http://cdnjs.cloudflare.com/ajax/libs/angular-i18n/1.2.15/angular-locale_ko-kr.js</p>
+			<p>Display in Vertical Mode {{vertmode}} 
+			<input type="checkbox" ng-model="vertmode"/>
+			</p>
+			<p>Basic Mode: {{date | date:'yyyy/MM/dd HH:mm a'}}</p>
+			<time-date-picker ng-model="date" orientation="{{vertmode}}" class="modal-content"></time-date-picker>
+			<p>Full Mode: {{date | date:'yyyy/MM/dd HH:mm a'}}</p>
+			<time-date-picker ng-model="date" data-display-mode="full" orientation="{{vertmode}}" class="modal-content"></time-date-picker>
+			<p>Start on Time, With 24 Hour: {{date | date:'yyyy/MM/dd HH:mm a'}}</p>
+			<time-date-picker ng-model="date" default-mode="time" display-twentyfour="true" orientation="{{vertmode}}" class="modal-content"></time-date-picker>
+			<p>Time Only: {{date | date:'yyyy/MM/dd HH:mm a'}}</p>
+			<time-date-picker ng-model="date" display-mode="time" orientation="{{vertmode}}" class="modal-content"></time-date-picker>
+			<p>Date Only: {{date | date:'yyyy/MM/dd HH:mm a'}}</p>
+			<time-date-picker ng-model="date" display-mode="date" orientation="{{vertmode}}" class="modal-content"></time-date-picker>
         </section>
 
         <aside id="sidebar">
@@ -71,6 +66,12 @@
       </div>
     </div>
 
-  
+  <script type="text/javascript" src="javascripts/angular.min.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular-animate.min.js"></script>
+  <script type="text/javascript" src="http://cdn.jsdelivr.net/hammerjs/2.0.4/hammer.min.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.js"></script>
+  <script type="text/javascript" src="dist/sc-date-time.js"></script>
+  <script type="text/javascript" src="javascripts/main.js"></script>
   </body>
 </html>
