--- a/customisation.html
+++ b/customisation.html
@@ -30,10 +30,10 @@
       </div>
       <div class="inner">
 	    <nav>
-	        <span><a href="/index.html">Home</a></span>
-		    <span><a href="/bootstrap.html">Bootstrap Demo</a></span>
-		    <span><a href="/material.html">Material Demo</a></span>
-		    <span><a href="/customisation.html" class="active">Customisation</a></span>
+	        <span><a href="index.html">Home</a></span>
+		    <span><a href="bootstrap.html">Bootstrap Demo</a></span>
+		    <span><a href="material.html">Material Demo</a></span>
+		    <span><a href="customisation.html" class="active">Customisation</a></span>
 	    </nav>
       </div>
     </header>
