--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </div>
       <div class="inner">
 	    <nav>
-	        <span><a href="/index.html" class="active">Home</a></span>
-		    <span><a href="/bootstrap.html">Bootstrap Demo</a></span>
-		    <span><a href="/material.html">Material Demo</a></span>
-		    <span><a href="/customisation.html">Customisation</a></span>
+	        <span><a href="index.html" class="active">Home</a></span>
+		    <span><a href="bootstrap.html">Bootstrap Demo</a></span>
+		    <span><a href="material.html">Material Demo</a></span>
+		    <span><a href="customisation.html">Customisation</a></span>
 	    </nav>
       </div>
     </header>
