--- a/bootstrap.html
+++ b/bootstrap.html
@@ -40,10 +40,10 @@
       </div>
       <div class="inner">
 	    <nav>
-	        <span><a href="/index.html">Home</a></span>
-		    <span><a href="/bootstrap.html" class="active">Bootstrap Demo</a></span>
-		    <span><a href="/material.html">Material Demo</a></span>
-		    <span><a href="/customisation.html">Customisation</a></span>
+	        <span><a href="index.html">Home</a></span>
+		    <span><a href="bootstrap.html" class="active">Bootstrap Demo</a></span>
+		    <span><a href="material.html">Material Demo</a></span>
+		    <span><a href="customisation.html">Customisation</a></span>
 	    </nav>
       </div>
     </header>
